# macon-rs

./: .gitignore  CHANGELOG.md  CRATES_IO.md  Cargo.toml  LICENSE-MIT  README.md  macon-config.schema.json
macon_api/: CRATES_IO.md  Cargo.toml
macon_api/src/: lib.rs
macon_derive/: CRATES_IO.md  Cargo.toml
macon_derive/src/: attributes.rs  common.rs  config.rs  lib.rs  model.rs
macon_derive/src/generators/: mod.rs  result_panic.rs  typestate.rs
macon_derive/tests/config/: macon-config-parse.yaml
macon_examples/: Cargo.toml  macon-config.yaml
macon_examples/src/: lib.rs
macon_tools/: Cargo.toml
src/: lib.rs  model.rs
src/generators/: mod.rs  panic.rs  result.rs  result_panic.rs  typestate.rs
tests/: blueprint_panic.rs  blueprint_panic_default.rs  blueprint_panic_default_field.rs  blueprint_panic_default_struct.rs  blueprint_panic_extend_vec.rs  blueprint_panic_named.rs  blueprint_panic_no_into.rs  blueprint_panic_option.rs  blueprint_panic_tuple.rs  blueprint_result.rs  blueprint_result_default.rs  blueprint_result_default_field.rs  blueprint_result_default_struct.rs  blueprint_result_extend_vec.rs  blueprint_result_named.rs  blueprint_result_no_into.rs  blueprint_result_option.rs  blueprint_result_tuple.rs  blueprint_typestate.rs  blueprint_typestate_default.rs  blueprint_typestate_default_field.rs  blueprint_typestate_default_struct.rs  blueprint_typestate_extend_vec.rs  blueprint_typestate_named.rs  blueprint_typestate_no_into.rs  blueprint_typestate_option.rs  blueprint_typestate_tuple.rs  macro_default.rs  macro_default_unit.rs  macro_panic.rs  macro_panic_default.rs  macro_panic_default_field.rs  macro_panic_default_field_all_disabled.rs  macro_panic_default_struct.bak  macro_panic_default_struct.rs  macro_panic_extend_vec.rs  macro_panic_named.rs  macro_panic_no_into.rs  macro_panic_no_into_struct.rs  macro_panic_option.rs  (+24 more)
