[package]
name = "macon"
version = "0.3.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Another builder macro-based generator with its own idioms."
homepage = "https://github.com/loganmzz/macon-rs"
repository = "https://github.com/loganmzz/macon-rs"
readme = "CRATES_IO.md"

keywords = [
    "builder",
    "derive",
    "macro",
    "setter",
]
categories = [
    "rust-patterns",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.73"
quote = "1.0.34"
syn = { version = "2.0.44", features = ["extra-traits"] }
