[package]
name = "macon"
version = "1.0.1-beta.1"
edition = "2021"

authors = ["Logan Mzz"]
license = "MIT OR Apache-2.0"
description = "Another builder macro-based generator with its own idioms."
homepage = "https://github.com/loganmzz/macon-rs"
repository = "https://github.com/loganmzz/macon-rs"

readme = "CRATES_IO.md"

keywords = [
    "builder",
    "derive",
    "macro",
    "setter",
]
categories = [
    "rust-patterns",
]

[dependencies]
macon_derive = { version = "=1.0.1-beta.1", path = "macon_derive" }
macon_api = { version = "=1.0.1-beta.1", path = "macon_api" }

[features]
debug = [
    "macon_derive/debug",
]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
members = [
    "macon_tools",
    "macon_derive",
    "macon_api",
    "macon_examples",
]
default-members = [
    ".",
    "macon_derive",
    "macon_api",
]

[workspace.package]
version = "1.0.1-beta.1"
edition = "2021"

authors = ["Logan Mzz"]
license = "MIT OR Apache-2.0"
description = "Another builder macro-based generator with its own idioms."
homepage = "https://github.com/loganmzz/macon-rs"
repository = "https://github.com/loganmzz/macon-rs"

[workspace.dependencies]
anyhow = "1.0.81"
assert_matches = "1.5.0"
proc-macro2 = "1.0.79"
quote = "1.0.34"
serde = "1.0.197"
serde_yaml = "0.9.33"
syn = "2.0.44"

