[package]
name = "macon"
version = "1.2.0"
edition = "2021"

authors = ["Logan Mzz"]
license = "MIT OR Apache-2.0"
description = "Another builder macro-based generator with its own idioms."
homepage = "https://github.com/loganmzz/macon-rs"
repository = "https://github.com/loganmzz/macon-rs"

readme = "CRATES_IO.md"

keywords = [
    "builder",
    "derive",
    "macro",
    "setter",
]
categories = [
    "rust-patterns",
]

[dependencies]
macon_derive = { version = "=1.2.0", path = "macon_derive" }
macon_api = { version = "=1.2.0", path = "macon_api" }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[workspace]
members = [
    "macon_tools",
    "macon_derive",
    "macon_api",
]
default-members = [
    ".",
    "macon_derive",
    "macon_api",
]

[workspace.package]
version = "1.2.0"
edition = "2021"

authors = ["Logan Mzz"]
license = "MIT OR Apache-2.0"
description = "Another builder macro-based generator with its own idioms."
homepage = "https://github.com/loganmzz/macon-rs"
repository = "https://github.com/loganmzz/macon-rs"

[workspace.dependencies]
proc-macro2 = "1.0.73"
quote = "1.0.34"
syn = "2.0.44"
