[package]
name = "macon_derive"
version.workspace = true
edition.workspace = true

authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true

readme = "CRATES_IO.md"

[lib]
proc-macro = true

[dependencies]
anyhow = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive",] }
serde_yaml = { workspace = true }
syn = { workspace = true, features = ["extra-traits",] }

[dev-dependencies]
macon_api = { path = "../macon_api" }
