[package]
name = "macon_tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
semver = "1.0.21"
